# ceg7550

./: CMakeLists.txt  README.md  vcpkg.json
assignments/: CMakeLists.txt
assignments/ass1/: CMakeLists.txt  main.cpp
assignments/ass1/src/: CMakeLists.txt  Image.ixx
docs/doxygen/: .doxyfile
